--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=utf-8
+spring.mvc.publish-request-handled-events=true
+spring.mvc.static-path-pattern=/static/**
 
