--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-server.port=8081
-
+server.port=8082
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/templates/student/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=utf-8
 spring.mvc.publish-request-handled-events=true
 spring.mvc.static-path-pattern=/static/**
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?useUnicode=true&characterEncoding=utf-8
+spring.datasource.password=111qqqQQQ
+spring.datasource.username=root
+
 
